Bug 1302340 - Allow SVGElement to be focusable when tabindex is -1; r?heycam

MozReview-Commit-ID: CLyDfaBRdBa